----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$


2004-02-27 Michal Cihar  <imback@cihar.com>
    * config.inc.php, libraries/config_import.lib.php,
      libraries/auth/cookie.auth.lib.php: Encrypted password is working only
      for limited (configurable) time, user name is encrypted (RFE #902295).

2004-02-26 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 905066, memory eater, thanks to xuefer

2004-02-24 Marc Delisle  <lem9@users.sourceforge.net>
    * pdf_pages.php: bug 903450, typo
    * tbl_row_delete.php: bug 878995: mult_submits.inc.php should not be
      called twice

2004-02-18 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug 899610, undefined variable $save_filename

2004-02-15 Alexander M. Turek  <onehotminute@derrabus.de>
    * libraries/select_lang.lib.php: Deactivated the code part that disables
      the UTF-8 language files if $cfg['AllowAnywhereRecoding'] is set to FALSE
      (bug #887183).
    * lang/russian-dos-622.inc.php, lang/russian-cp-622.inc.php,
      lang/snyc_lang.sh, libraries/select_lang.lib.php:
      - Changed charset definition from dos-622 into cp-622. Both definitions
        describe the same charset, but cp-622 is recognized better by some
        browsers;
      - File was broken due to some bad typos.
    * lang/korean*.inc.php, lang/sync_lang.sh, libraries/select_lang.lib.php:
      - Changed Korean charset to EUC-KR. The old charset is a subset of EUC-KR,
        so this change shouldn't cause big problems. The support for EUC-KR is
        wider and we are now able to create a Korean UTF-8 language file;
      - Added korean-utf-8 translation.
    * config.inc.php, libraries/config_import.lib.php: Added missing Arabic
      Windows-1256 charset to the default value of $cfg['AvailableCharsets'].
    * libraries/select_lang.lib.php, libraries/dbi/*.dbi.lib.php: When connected