@@ -5,6 +5,9 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-02-29 Alexander M. Turek  <howcanisleepwithyourvoiceinmyhead@derrabus.de>
+    * tbl_select.php: Fixed bug #887505 (PMA does not add MySQL charsets to
+      WHERE clauses).
 
 2004-02-27 Michal Cihar  <imback@cihar.com>
     * config.inc.php, libraries/config_import.lib.php,
